# CLEAR

./: .gitignore  README.md  pyproject.toml
examples/benchmark/: benchmark_base.py  benchmark_chexzero.py
examples/concepts/: dot_products_testset.py  exp_cbm.py  exp_linear.py  exp_zeroshot.py  plot_cbm_data_auditing.py  visualize_attention.py
examples/model_auditing/: image_retriever.py  monet_auditing.py  monet_ec_atelectasis_auditing.py
src/clear/: __init__.py  concepts.py  data_processing.py  evaluation.py  metrics.py  pipeline.py  zero_shot.py
